--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Navigation -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#" style="color: orangered;">Mathis BERTRAND</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,8 +61,8 @@
         </div>
     </section>
 
-    <!-- Projets Section -->
-    <section id="projets" class="d-flex align-items-center bg-light">
+    <!-- Projects Section -->
+    <section id="projects" class="d-flex align-items-center">
         <div class="container">
             <br>
             <h2 class="text-center">My Projects</h2>
